add references north-america

--- a/continents/north-america/equifax.html
+++ b/continents/north-america/equifax.html
@@ -336,20 +336,20 @@
                 <p class="">The Equifax breach severely damaged the company’s reputation. Top executives, including the CEO, CIO, and CSO, resigned. The breach led to more than 200 lawsuits, regulatory investigations, and congressional hearings. In 2019, Equifax agreed to a settlement of up to $700 million with the FTC, CFPB, and state attorneys general. The case prompted nationwide discussions on data privacy, consumer protection, and cybersecurity practices. Consumers were offered free credit monitoring, but many continue to face long-term identity fraud risks.</p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://archive.epic.org/privacy/data-breach/equifax/">https://archive.epic.org/privacy/data-breach/equifax/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.breachsense.com/blog/equifax-data-breach/">https://www.breachsense.com/blog/equifax-data-breach/</a>
-                        </li>
+            <!-- REFERENCES -->
+            <div>
+                <details class="rounded border border-indigo-900 shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>https://archive.epic.org/privacy/data-breach/equifax/</li>
+                        <li>https://www.breachsense.com/blog/equifax-data-breach/</li>
+                       
                     </ul>
-                </div>
+                    </div>
+                </details>
             </div>
         </div>
 		
