--- a/continents/north-america/marriot-international.html
+++ b/continents/north-america/marriot-international.html
@@ -343,22 +343,20 @@
                 </p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://coverlink.com/case-study/marriott-data-breach/">https://coverlink.com/case-study/marriott-data-breach/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href=" https://www.csoonline.com/article/567795/marriott-data-breach-faq-how-did-it-happen-and-what-was-the-impact.html
-                            "> https://www.csoonline.com/article/567795/marriott-data-breach-faq-how-did-it-happen-and-what-was-the-impact.html
-                            </a>
-                        </li>
+            <!-- REFERENCES -->
+            <div>
+                <details class="rounded border border-indigo-900 shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>https://coverlink.com/case-study/marriott-data-breach/</li>
+                        <li>https://www.csoonline.com/article/567795/marriott-data-breach-faq-how-did-it-happen-and-what-was-the-impact.html</li>
+                       
                     </ul>
-                </div>
+                    </div>
+                </details>
             </div>
         </div>
 		
