--- a/famous-cyber-attacks/2016-comelec-data-breach.html
+++ b/famous-cyber-attacks/2016-comelec-data-breach.html
@@ -334,6 +334,19 @@
                             </p>
                         </div>
                     </div>
+                    <div>
+                        <details class="rounded border shadow" open>
+                            <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                                References
+                            </summary>
+                            <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                                <ul class="list-disc list-inside space-y-1">
+                                    <li>COMELEC data breach. (2025, May 16). In <i>Wikipedia</i>. Retrieved from <br>https://en.wikipedia.org/wiki/COMELEC_data_breach</li>
+                                    <li>Yap, D. J. (2016, April 29). Comelec data breach worse than feared; 55M records compromised. <i>Philippine Daily Inquirer</i>. Retrieved from <br>https://newsinfo.inquirer.net/782873/comelec-data-breach-worse-than-feared-55m-records-compromised</li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
                 </div>
             </div>
 		</div>
