--- a/famous-cyber-attacks/lockbit-ransom.html
+++ b/famous-cyber-attacks/lockbit-ransom.html
@@ -340,6 +340,19 @@
                             </p>
                         </div>
                     </div>
+                    <div>
+                        <details class="rounded border shadow" open>
+                            <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                                References
+                            </summary>
+                            <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                                <ul class="list-disc list-inside space-y-1">
+                                    <li>LockBit ransomware. (2025, May 15). In <i>Wikipedia</i>. Retrieved from <br>https://en.wikipedia.org/wiki/LockBit</li>
+                                    <li>Trend Micro. (2023, June 15). LockBit 3.0: What You Need to Know About the Latest Version. <i>Trend Micro</i>. Retrieved from <br>https://www.trendmicro.com/vinfo/us/security/definition/lockbit-3-0</li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
                 </div>
             </div>
 		</div>
