--- a/famous-cyber-attacks/sony-picture-hack.html
+++ b/famous-cyber-attacks/sony-picture-hack.html
@@ -333,6 +333,19 @@
                             <p>The hack raised political tensions between the U.S. and North Korea. The FBI formally attributed the attack to North Korea, leading to economic sanctions. It also marked a turning point in U.S. government policy towards cyberattacks from foreign states.</p>
                         </div>
                     </div>
+                    <div>
+                        <details class="rounded border shadow" open>
+                            <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                                References
+                            </summary>
+                            <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                                <ul class="list-disc list-inside space-y-1">
+                                    <li>Sony Pictures Entertainment hack. (2025, May 15). In <i>Wikipedia</i>. Retrieved from <br>https://en.wikipedia.org/wiki/Sony_Pictures_Entertainment_hack</li>
+                                    <li>Nakashima, E., & Peterson, A. (2014, December 19). North Korea’s cyberattack on Sony is part of a long history of hacking. <i>The Washington Post</i>. Retrieved from <br>https://www.washingtonpost.com/world/national-security/north-koreas-cyberattack-on-sony-is-part-of-a-long-history-of-hacking/2014/12/19/9a9cae4c-871a-11e4-abe3-84846447075e_story.html</li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
                 </div>
             </div>
 		</div>
