--- a/famous-cyber-attacks/the-aws-ddos-attack.html
+++ b/famous-cyber-attacks/the-aws-ddos-attack.html
@@ -338,6 +338,19 @@
                             </p>
                         </div>
                     </div>
+                    <div>
+                        <details class="rounded border shadow" open>
+                            <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                                References
+                            </summary>
+                            <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                                <ul class="list-disc list-inside space-y-1">
+                                    <li>Largest DDoS attack. (2025, April 28). In <i>Wikipedia</i>. Retrieved from <br>https://en.wikipedia.org/wiki/Largest_DDoS_attack</li>
+                                    <li>Goodin, D. (2020, June 25). Amazon Web Services says it thwarted record-breaking 2.3 Tbps DDoS attack. <i>Ars Technica</i>. Retrieved from <br>https://arstechnica.com/information-technology/2020/06/amazon-web-services-says-it-thwarted-record-breaking-2-3-tbps-ddos-attack/</li>
+                                </ul>
+                            </div>
+                        </details>
+                    </div>
                 </div>
             </div>
 		</div>
