--- a/recent-cyber-attacks/kawasaki-motors.html
+++ b/recent-cyber-attacks/kawasaki-motors.html
@@ -344,7 +344,7 @@
         </div>
         
         <div>
-            <details class="rounded border shadow" open>
+            <details class="rounded border shadow border-indigo-900" open>
                 <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                 References
                 </summary>
