--- a/famous-cyber-attacks.html
+++ b/famous-cyber-attacks.html
@@ -301,11 +301,11 @@
 		
 		<div class="md:px-2 px-4 max-w-6xl mx-auto grid grid-cols-3 gap-4">
             <div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/The-WannaCry-Ransomware-Legacy-Attack-Asimily-png.png" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/wanncry(1).png" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">WannaCry Ransomware</h5>
-					<p class="text-sm text-gray-300">
-                        The WannaCry ransomware exploited a vulnerability in Microsoft Windows' SMBv1 protocol, encrypting files and demanding Bitcoin ransom payments. It spread rapidly like a worm across networks, using the EternalBlue exploit, which was originally developed by the NSA. Victims included hospitals, businesses, and governments in over 150 countries, causing widespread disruption. Microsoft quickly issued patches, but many outdated systems remained vulnerable, amplifying the attack’s impact. WannaCry demonstrated how devastating ransomware could be when combined with worm-like propagation.</p>
+					<p class=" text-gray-300">
+                        WannaCry ransomware exploited a vulnerability in Windows' SMBv1 protocol using the NSA-developed EternalBlue exploit, spreading rapidly across networks, encrypting files, and demanding Bitcoin ransoms. Affecting over 150 countries, including hospitals and governments, it caused massive disruption and highlighted the dangers of ransomware with worm-like capabilities, especially on unpatched systems.</p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/wannacry-ransomware-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
@@ -313,10 +313,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/yahoo.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/yahoo(1).webp" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">Yahoo Data Breaches</h5>
-					<p class="text-sm text-gray-300">Between 2013 and 2014, Yahoo suffered two massive data breaches affecting a total of over 3 billion user accounts. Attackers stole sensitive information such as names, emails, hashed passwords, and security questions, exploiting vulnerabilities through spear-phishing and forged cookies. The breaches were not fully disclosed until 2016–2017, significantly damaging Yahoo’s reputation and valuation. Investigations suggested that nation-state actors were involved in at least one of the breaches. The incident remains one of the largest data breaches in history by number of affected users.
+					<p class=" text-gray-300">Between 2013 and 2014, Yahoo experienced two massive data breaches affecting over 3 billion user accounts, where attackers used spear-phishing and forged cookies to steal sensitive information like names, emails, and hashed passwords. The breaches, linked to nation-state actors and not fully disclosed until years later, severely damaged Yahoo’s reputation and remain among the largest in history.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/yahoo-data-breaches.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -325,10 +325,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/iloveyou-virus.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/i-love-you(1).webp" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">I Love You Virus</h5>
-					<p class="text-sm text-gray-300">The ILOVEYOU virus was a computer worm that spread through email, disguised as a love confession attachment. Once opened, it overwrote files and automatically emailed itself to all contacts in the victim’s address book, causing massive global infection. The worm caused billions of dollars in damages, affecting both personal users and major corporations. Originating from the Philippines, it led to increased awareness and major changes in email security worldwide. It remains one of the most infamous computer viruses in history.</p>
+					<p class=" text-gray-300">The ILOVEYOU virus was a computer worm from the Philippines that spread via email disguised as a love confession, overwriting files and sending itself to all contacts in a victim’s address book. Causing billions in damages and impacting users worldwide, it prompted major changes in email security and remains one of the most infamous computer viruses in history.</p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/i-love-you-virus.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
@@ -336,10 +336,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/sony-picture.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/sony-picture(1).webp" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">Sony Pictures Hack</h5>
-					<p class="text-sm text-gray-300">In November 2014, Sony Pictures Entertainment was the victim of a cyberattack that led to the theft and leak of massive amounts of internal data. Hackers deployed a wiper malware called Destover, erasing data and rendering systems inoperable. The attack was allegedly carried out by North Korean state-sponsored hackers in retaliation for the planned release of The Interview, a comedy film critical of North Korea’s leader. Leaked emails, scripts, and sensitive employee information caused major financial and reputational damage to Sony. It remains a landmark case in cyber-espionage and cyber-warfare against corporations.
+					<p class=" text-gray-300">In November 2014, Sony Pictures suffered a major cyberattack involving the Destover wiper malware, which erased data and leaked sensitive internal information, crippling the company’s operations. Allegedly carried out by North Korean state-sponsored hackers in response to The Interview, the attack caused severe financial and reputational damage and remains a landmark case in corporate cyber-espionage.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/sony-picture-hack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -348,10 +348,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/lockbit-ransomware.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/lockbit-hack(1).jpg" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">LockBit Ransomware</h5>
-					<p class="text-sm text-gray-300">LockBit is a sophisticated ransomware operation that functions under a Ransomware-as-a-Service (RaaS) model, allowing affiliates to launch attacks using LockBit’s tools in exchange for a profit share. Since emerging in 2020, it has evolved through multiple versions, including LockBit 2.0, 3.0, and LockBit Black, each introducing faster encryption and stronger evasion techniques. The group targets high-value organizations, often stealing data before encrypting it and threatening to leak the data if ransoms aren’t paid. Known for its automated attack tools and tailored ransom notes, LockBit has become one of the most dominant ransomware groups globally. Despite takedowns and warnings from law enforcement, its activity remains high as of 2025.
+					<p class=" text-gray-300">LockBit is a dominant ransomware group operating under a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks in exchange for profit shares, with evolving versions like LockBit 2.0, 3.0, and Black offering faster encryption and improved evasion. Since 2020, it has targeted high-value organizations, using data theft and extortion tactics, and despite law enforcement efforts, remains highly active as of 2025.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/lockbit-ransom.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -360,10 +360,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/notpetya.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/notpetya (1).webp" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">NotPetya</h5>
-					<p class="text-sm text-gray-300">The NotPetya ransomware encrypts user files when a system reboots because it overwrites the Master Boot Record. For it to carry out its malicious payload, it either plans a reboot or tries to force a system problem. By taking use of the "EternalBlue" vulnerability and using credentials that have been obtained by working with programs like PSEXEC and WMI, the virus spreads internally within networks. Its usage of "EternalBlue" is restricted to internal transmission, in contrast to WannaCry. Since the connected email address for getting the recovery key is no longer functioning, there is no purpose in paying the required ransom. Fortunately, a technique known as a "vaccination" has been discovered which makes the NotPetya ransomware harmless.
+					<p class=" text-gray-300">NotPetya is a ransomware variant that overwrites the Master Boot Record to encrypt files upon reboot, often forcing a system crash to trigger its payload. It spreads internally using the EternalBlue exploit and stolen credentials via tools like PSEXEC and WMI, but unlike WannaCry, it doesn’t use EternalBlue for external propagation, and due to a non-functional recovery email, paying the ransom is futile—though a “vaccination” method has been found to neutralize it.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/lockbit-ransom.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -372,10 +372,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/pegasus.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/pegasus(1).jpg" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">Pegasus Spyware</h5>
-					<p class="text-sm text-gray-300">The Israeli cyber-intelligence company NSO Group created the powerful malware Pegasus to stealthily attack iPhones and collect data. It can be secretly installed, frequently with "zero-click" techniques that don't involve the device owner. After installation, Pegasus has access to location information, call records, emails, messages, pictures, and even encrypted files. Pegasus has been used to spy on political personalities, journalists, and activists, despite NSO Group's claim that it only sells it to government organizations for legitimate security reasons. The software received criticism from all around the world for allowing political suppression and human rights abuses. It is one of the most controversial surveillance instruments in the world due to its expensive price and advanced features.
+					<p class=" text-gray-300">Pegasus, developed by Israeli cyber-intelligence firm NSO Group, is a highly advanced spyware capable of infecting iPhones through "zero-click" attacks and accessing sensitive data like messages, emails, and encrypted files. Though marketed for government use in legitimate security operations, its deployment against journalists, activists, and political figures has sparked global outrage, making it one of the most controversial surveillance tools in the world.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/pegasus-spyware.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -384,10 +384,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/data-breach-comelec.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/data-breach-comelec (1).jpg" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">2016 COMELEC Data Breach</h5>
-					<p class="text-sm text-gray-300">A major breach of data at the Philippine Commission on Elections (COMELEC) in March 2016 resulted in the exposure of 55 million registered voters' personal data. Hackers, going by the name "LulzSec Pilipinas," used SQL injection techniques to get access to the database by taking advantage of vulnerabilities in the COMELEC website, such as outdated software and weak passwords. Sensitive information including complete names, addresses, dates of birth, and passport numbers was exposed in the breach and later made public online. The attack caused serious legal and political problems for COMELEC executives and raised concerns about the safety of government systems. A costly investigation, technology changes, and damage to the Philippine electoral system's reputation resulted from the the event.
+					<p class=" text-gray-300">In March 2016, a major data breach at the Philippine Commission on Elections (COMELEC) exposed the personal information of 55 million voters after hackers exploited website vulnerabilities using SQL injection. The attack, carried out by "LulzSec Pilipinas," led to serious legal and political fallout, public release of sensitive data, and lasting damage to the credibility of the Philippine electoral system.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/2016-comelec-data-breach.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
@@ -396,10 +396,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="/assets/famous-cyber-attacks/myspace.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="/assets/famous-cyber-attacks/myspace(1).jpg" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">MySpace XSS</h5>
-					<p class="text-sm text-gray-300">Samy Kamkar's well-known MySpace XSS attack took advantage of a vulnerability in MySpace's security framework. Samy added himself as a friend and hero to any viewer's profile automatically in October 2005 by inserting a little 4KB script into his user profile. In under 20 hours, this script reached 1 million friends after spreading quickly across each compromised user profile. MySpace was forced by the malware attack to temporarily shut down the website in order to eliminate the dangerous code. Even though Samy insisted that his acts were harmless and only for fun, he was later the subject of an investigation, given a $20,000 fine, and put on probation. This incident made clear how crucial it is to properly filter input in order to avoid XSS vulnerabilities.</p>
+					<p class=" text-gray-300">In October 2005, Samy Kamkar exploited an XSS vulnerability on MySpace by embedding a 4KB script in his profile that automatically added him as a friend and hero to anyone who viewed it, spreading to over a million users in under 20 hours. Though he claimed it was a harmless experiment, the incident forced MySpace offline, led to legal consequences for Kamkar, and highlighted the critical need for proper input filtering to prevent XSS attacks.</p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/myspace-xss.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
 					</div>
@@ -407,10 +407,10 @@
 			</div>
 
 			<div class="bg-[#141528] rounded text-white border border-indigo-900">
-				<img src="assets/famous-cyber-attacks/DDOS-attack.jpg" class="w-full h-44 object-cover rounded-t">
+				<img src="assets/famous-cyber-attacks/ddos-attack(1).jpg" class="w-full h-44 object-cover rounded-t">
 				<div class="p-4 space-y-2">
 					<h5 class="text-lg font-medium">AWS DDoS Attack</h5>
-					<p class="text-sm text-gray-300">The AWS DDoS attack in Q1 2020, which generated an amazing 2.3 Tbps of traffic, was the biggest attack ever documented at the time. By using a Connection-less Lightweight Directory Access Protocol (CLDAP) reflection technique, this attack far surpassed the previous record. CLDAP servers are an excellent tool for attackers because, if they are exposed or misconfigured, they can respond to spoof requests with significantly larger data packets, thus increasing the assault. Even while this attack received a lot of media attention, many bigger attacks go unreported. The need to implement a zero-trust security model and ongoing DDoS defensive tactics in order to counteract changing threats is highlighted by this incident. Attack volumes have increased quickly, showing the increasing difficulty of DDoS attacks and the urgent need for strong security.
+					<p class=" text-gray-300">The AWS DDoS attack in Q1 2020, which generated an amazing 2.3 Tbps of traffic, was the biggest attack ever documented at the time. By using a Connection-less Lightweight Directory Access Protocol (CLDAP) reflection technique, this attack far surpassed the previous record. CLDAP servers are an excellent tool for attackers because, if they are exposed or misconfigured, they can respond to spoof requests with significantly larger data packets, thus increasing the assault.
                     </p>
 					<div class="mt-2">
 						<a href="/famous-cyber-attacks/the-aws-ddos-attack.html" class="px-2 py-1 font-medium text-sm rounded bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
