--- a/index.html
+++ b/index.html
@@ -337,6 +337,9 @@
                 </div>
             </nav>
 
+            <div>
+                
+            </div>
 			<div class="grid md:grid-cols-3 grid-cols-1 max-w-7xl mx-auto md:mt-20 mt-10">
 				<div class="md:col-span-2 col-span-1 flex items-center justify-center">
                     <div class="block px-4">
@@ -350,34 +353,36 @@
 			</div>
 		</div>
 
-		
-		<div class="md:px-2 px-4">
-			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl gap-4 mx-auto">
-				<div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
-                    <h5 class="text-xl font-medium">Types of Vulnerabilities</h5>
-                    <p>Welcome to our guide on the different types of vulnerabilities that can affect systems, applications, and networks. Understanding these weaknesses is crucial in building stronger defenses against cyber threats.</p>
-                    <div>
-                        <a href="./types-of-vulnerability.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-                    </div>
-                </div>
+        <div class="md:px-2 px-4">
+        <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl gap-4 mx-auto">
+            
+            <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 flex flex-col">
+            <h5 class="text-xl font-medium">Types of Vulnerabilities</h5>
+            <p class="flex-grow mt-2">Welcome to our guide on the different types of vulnerabilities that can affect systems, applications, and networks. Understanding these weaknesses is crucial in building stronger defenses against cyber threats.</p>
+            <div class="mt-auto pt-4">
+                <a href="./types-of-vulnerability.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block">Learn More</a>
+            </div>
+            </div>
 
-                <div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
-                    <h5 class="text-xl font-medium">Protective Measures</h5>
-                    <p>Welcome to the Protective Measures section. Here, you'll learn about both physical and software-based methods used to secure systems against various threats.</p>
-                    <div>
-                        <a href="./protective-measure.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-                    </div>
-                </div>
+            <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 flex flex-col">
+            <h5 class="text-xl font-medium">Protective Measures</h5>
+            <p class="flex-grow mt-2">Welcome to the Protective Measures section. Here, you'll learn about both physical and software-based methods used to secure systems against various threats.</p>
+            <div class="mt-auto pt-4">
+                <a href="./protective-measure.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block">Learn More</a>
+            </div>
+            </div>
 
-                <div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
-                    <h5 class="text-xl font-medium">Future Cyber Threats</h5>
-                    <p>Welcome to the Future Cyber Threats section. This part explores emerging risks in cybersecurity and how they may impact individuals, organizations, and technologies in the years to come.</p>
-                    <div>
-                        <a href="./future-cyber-threats.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
-                    </div>
-                </div>
-			</div>
-		</div>
+            <div class="bg-[#141528] p-4 rounded text-white border border-indigo-900 flex flex-col">
+            <h5 class="text-xl font-medium">Future Cyber Threats</h5>
+            <p class="flex-grow mt-2">Welcome to the Future Cyber Threats section. This part explores emerging risks in cybersecurity and how they may impact individuals, organizations, and technologies in the years to come.</p>
+            <div class="mt-auto pt-4">
+                <a href="./future-cyber-threats.html" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 inline-block">Learn More</a>
+            </div>
+            </div>
+
+        </div>
+        </div>
+
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
