update: footer, container hover effects, navigations

--- a/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
+++ b/concept-of-cybersecurity/origin-of-hacking-and-cybercrime.html
@@ -55,35 +55,35 @@
                     </h4>
 
                     <div class="grid grid-cols-1 gap-4">
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Morris Worm (November, 1988)</h6>
                             <p class="text-sm text-gray-300">November, 1988</p>
                             <div>
                                 <p>The Morris Worm, released on November 2, 1988, was a self-replicating program that infected around 6,000 Unix systems by exploiting flaws in email and network services. It caused widespread slowdowns and communication disruptions, with damages estimated up to millions. This incident led to the creation of the first Computer Emergency Response Team (CERT) to address future cyber threats.</p>
                                 <div class="mt-2">
-                                    <a class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="https://www.fbi.gov/news/stories/morris-worm-30-years-since-first-major-attack-on-internet-110218" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">The Melissa Virus (March, 1999)</h6>
                             <p class="text-sm text-gray-300">March, 1999</p>
                             <div>
                                 <p>The Melissa virus, one of the first major email-based cyberattacks, spread in March 1999 by tricking users into opening a malicious Word document. It infected over a million email accounts and caused around $80 million in damages by automatically emailing itself to the first 50 contacts in Microsoft Outlook. The attack led to the arrest of its creator, David L. Smith, and prompted the FBI to strengthen its cybersecurity efforts.</p>
                                 <div class="mt-2">
-                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="https://www.fbi.gov/news/stories/melissa-virus-20th-anniversary-032519" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">ILOVEYOU virus (May, 2000)</h6>
                             <p class="text-sm text-gray-300">May, 2000</p>
                             <div>
                                 <p>Released on May 4, 2000, the ILOVEYOU virus was a global email-based attack created by two Filipino college students. Disguised as a love letter, it spread rapidly by sending itself to all contacts in a user’s address book and overwriting critical files, causing data loss and crashes. The attack resulted in an estimated $15 billion in global damages.</p>
                                 <div class="mt-2">
-                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="../famous-cyber-attacks/i-love-you-virus.html" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
 		
 
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
-            <div class="max-w-7xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
+            <div class="max-w-6xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
                         <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
@@ -143,28 +143,31 @@
                     <div>
                         <h4 class="font-medium">Quick Links</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="../index.html">Home</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../recent-attacks.html">Recent News</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../concepts-of-cybersecurity.html">Learn Now</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../about-us.html">About Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://elaborate-paprenjak-b3b1e1.netlify.app/">Cuenco, John Louie</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://biybow.github.io/purtfoillio/portfolio.html">Laugo, Cyril Marius</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://ltshmarciano.github.io/Personal-Website/">Marciano, Latisha***</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://sylvie7503.github.io/LandingPage/home.html">Moya, Patrick Christopher</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://freakest.github.io/janart.github.io/LandingPage/index.html">Pagaduan, Jan Art</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://je-sp.github.io/jesshub/index.html">Paguel, Jess Patrick</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://joaquinpangilinan.github.io/MPortfolio/">Pangilinan, Myles</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://edwardallen-ricafranca.github.io/TheTarnishEd/">Ricafranca, Edward Allen</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://cyieie.github.io/MTerm-Project/index.html">Songodanan, Cyrus</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://tadiyusss.github.io/integrative-portfolio/">Toledo, Thaddeus</a></li>
                         </ul>
                     </div>
                 </div>
