--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('./assets/hero-origin-of-hacking-and-cybercrime.png')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('./assets/hero-prominent-hackers.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="w-full p-4 flex items-center justify-between">
                 <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                     <div class="flex items-center space-x-4">
@@ -36,81 +36,64 @@
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
-            <div class="grid grid-cols-3 gap-4 max-w-4xl mx-auto">
+            <div class="grid grid-cols-3 gap-10 max-w-4xl mx-auto">
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-kevin-mitnick.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-kevin-mitnick.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Black and white portrait of a man speaking with a serious expression">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Kevin Mitnick</h5>
                                 <p>Known to the FBI as the "Most Wanted Hacker," Kevin Mitnick transitioned from a notorious cybercriminal to a leading cybersecurity consultant. He now advises over 500 companies and government agencies worldwide. Mitnick is also an accomplished author, with works like The Art of Deception and The Art of Intrusion.</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-tsutomu-shimomura.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Portrait of a man with long hair standing outdoors with a slight smile">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Tsutomu Shimomura</h5>
-                                <p>Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
+                                <p>Tsutomu Shimomura gained fame for assisting the FBI in capturing Kevin Mitnick in 1995. He chronicled this pursuit in his book Takedown. Currently, Shimomura is the CEO and founder of Neofocal, a company specializing in smart LED networks.</p> 
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-charlie-miller.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-charlie-miller.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man in front of multiple computer screens in a tech-focused setting">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Charlie Miller</h5>
                                 <p>A former NSA hacker, he is renowned for winning the Pwn2Own contest four times. He was the first to remotely exploit vulnerabilities in iPhones and Android devices. Miller now works at Cruise, focusing on the security of autonomous vehicles</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-joanna-rutkowska.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-joanna-rutkowska.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Woman with glasses and a neutral expression facing the camera">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Joanna Rutkowska</h5>
                                 <p>Joanna Rutkowska is a cybersecurity expert specializing in rootkit research and development. She founded the Invisible Things Lab, dedicated to enhancing system security. Rutkowska's work has significantly advanced techniques to detect and counter rootkit attacks.</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-bruce-schneier.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-bruce-schneier.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man with a beard and a flat cap wearing a blazer and patterned shirt">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Bruce Schneier</h5>
                                 <p>Bruce Schneier is a highly accomplished figure in cybersecurity, with over 30 years of experience. He has made significant contributions to cryptography, security protocols, risk management, and security policy. Schneier's work has benefited renowned companies like Google.</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-span-3">
-                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4">
-                            <img src="assets/prominent-hacker-greg-hoglund.png" class="w-64 h-64 ob-ject-cover rounded-s-lg">
+                        <div class="bg-[#141528] border border-indigo-900 rounded-lg flex items-center space-x-4 transform transition-all duration-300 hover:scale-105">
+                            <img src="assets/prominent-hacker-greg-hoglund.png" class="w-64 h-64 ob-ject-cover rounded-s-lg" alt="Man smiling with a beard and a stripped polo shirt">
                             <div class="block p-4 space-y-4">
                                 <h5 class="text-xl font-medium">Greg Hoglund</h5>
                                 <p>Greg Hoglund is a renowned computer forensics expert known for his work in combating cyber threats. He holds patents for fault injection methods used in software testing. Hoglund founded HBGary, a notable technology security firm that joined the McAfee Security Innovation Alliance in 2008.</p>
-                                <div>
-                                    <a href="#" class="bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Read More</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -139,7 +122,7 @@
 		
 
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
-            <div class="max-w-7xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
+            <div class="max-w-6xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
                         <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
@@ -151,28 +134,31 @@
                     <div>
                         <h4 class="font-medium">Quick Links</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="../index.html">Home</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../recent-attacks.html">Recent News</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../concepts-of-cybersecurity.html">Learn Now</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../about-us.html">About Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://elaborate-paprenjak-b3b1e1.netlify.app/">Cuenco, John Louie</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://biybow.github.io/purtfoillio/portfolio.html">Laugo, Cyril Marius</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://ltshmarciano.github.io/Personal-Website/">Marciano, Latisha***</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://sylvie7503.github.io/LandingPage/home.html">Moya, Patrick Christopher</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://freakest.github.io/janart.github.io/LandingPage/index.html">Pagaduan, Jan Art</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://je-sp.github.io/jesshub/index.html">Paguel, Jess Patrick</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://joaquinpangilinan.github.io/MPortfolio/">Pangilinan, Myles</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://edwardallen-ricafranca.github.io/TheTarnishEd/">Ricafranca, Edward Allen</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://cyieie.github.io/MTerm-Project/index.html">Songodanan, Cyrus</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://tadiyusss.github.io/integrative-portfolio/">Toledo, Thaddeus</a></li>
                         </ul>
                     </div>
                 </div>
