--- a/recent-cyber-attacks/icbc-financial-services.html
+++ b/recent-cyber-attacks/icbc-financial-services.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>ThreatScope</title>
+		<title>ICBC Financial Services</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
